2008-09-13  Stef Walter  <stef@memberwebs.com>

	* pgp/seahorse-pgp-key-properties.c: Show revoked subkeys
	properly in details view of PGP keys. Fixes bug #550913
	
2008-09-13  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-key-widget.c:
	* pgp/seahorse-pgp-key-properties.c: Fix reference problems
	when closing with a PGP properties window open.
	
2008-09-13  Stef Walter  <stef@memberwebs.com>

	* ssh/seahorse-ssh-source.c: Fix problem deleting SSH
	keys. Fixes bug #551377
	
2008-09-13  Stef Walter  <stef@memberwebs.com>

	* libcryptui/cryptui-key-list.c: Fix column widths, and 
	elipsize long text in key listing. Fixes bug #551426
	Patch by Adam Schreiber.
	
2008-09-12  Stef Walter  <stef@memberwebs.com>

	* pgp/seahorse-pgp-keysets.c: Fix problem with 'no keys 
	available' when trying to sign a PGP key. Fixes bug #545626
	
2008-09-10  Stef Walter  <stef@memberwebs.com>

	* gkr/seahorse-gkeyring-source.c:
	* libcryptui/cryptui.h:
	* libseahorse/libseahorse-c.vapi:
	* libseahorse/seahorse-key.h:
	* pgp/seahorse-pgp-key.c:
	* pkcs11/p11.vapi:
	* pkcs11/seahorse-pkcs11-certificate.vala:
	* pkcs11/seahorse-pkcs11-source.vala:
	* src/seahorse-viewer.c:
	* ssh/seahorse-ssh-key.c: Add 'exportable' flag to objects/keys
	and don't enable export UI if selected objects are not exportable.
	Fixes bug #551477
	
2008-09-09  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-transfer-operation.c: Fix crash/warning 
	when syncing with an ldap server that doesn't have our key.
	   
2008-09-08  Adam Schreiber  <sadam@clemson.edu>

    * libcryptui/cryptui-key-combo.c: Ellipsize too long UIDs
    Fixes bug #550281
    
    * pixmaps/scalable/Makefile.am: Remove remaining reference to 
    seahorse-applet.svg. Fixes bug #551379

    * pixmaps/22x22/seahorse-applet-key.svg (deleted):
    * pixmaps/22x22/seahorse-applet-encrypted.svg (deleted):
    * pixmaps/22x22/seahorse-applet-unknown.svg (deleted):
    * pixmaps/22x22/seahorse-applet-text.png (deleted):