@@ -1,5 +1,12 @@
 2008-09-13  Stef Walter  <stef@memberwebs.com>
 
+	* daemon/seahorse-service-crypto.c:
+	* daemon/seahorse-service.h: Return a 'cancelled' error when
+	from the daemon crypto dbus methods when a user cancels
+	out of a password prompt. Fixes bug #520119
+	
+2008-09-13  Stef Walter  <stef@memberwebs.com>
+
 	* pgp/seahorse-pgp-key-properties.c: Show revoked subkeys
 	properly in details view of PGP keys. Fixes bug #550913
 	
